update control mobile option